# ROneCOne

./: .gitignore  .ronecone.env.example  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
benchmarks/: v0.1.0-baseline.json  v0.2.0-baseline.json  v0.3.0-baseline.json  v0.5.0-baseline.json  v0.6.0-baseline.json  v0.7.0-baseline.json  v0.8.0-baseline.json  v0.9.0-baseline.json  v1.0.0-baseline.json  v1.1.0-baseline.json  v1.2.0-baseline.json  v1.3.0-baseline.json  v1.4.0-baseline.json  v1.5.0-baseline.json  v2.0.0-baseline.json
demo/: ROneCOne_Collections_Demo.xlsm  ROneCOne_Data_Demo.xlsm  ROneCOne_DateTime_Demo.xlsm  ROneCOne_Delegates_Demo.xlsm  ROneCOne_Demo.xlsm  ROneCOne_Events_Demo.xlsm  ROneCOne_Exceptions_Demo.xlsm  ROneCOne_Files_Demo.xlsm  ROneCOne_Http_Demo.xlsm  ROneCOne_Json_Demo.xlsm  ROneCOne_Process_Demo.xlsm  ROneCOne_Tasks_Demo.xlsm  ROneCOne_Text_Demo.xlsm  ROneCOne_Xml_Demo.xlsm  ROneCOne_Zip_Demo.xlsm
docs/: README.md  architecture.md  collections.md  compression.md  csv.md  data.md  datetime.md  delegates.md  development.md  events.md  exceptions.md  files.md  hashing.md  http.md  json.md  logging.md  process.md  regex.md  strings.md  tasks.md  xml.md
src/: ROneCOne.cls
tools/: build_capability_demo_workbooks.cjs  build_collections_demo_workbook.cjs  build_demo_workbook.cjs  build_native_task_kernel.py  build_test_workbook.py  convert_demo_workbook.ps1  package_demo_workbook.py  render_demo_workbook.cjs  render_demo_workbook.ps1  run_demo_workbook.ps1  run_excel_tests.ps1  run_excel_tests_worker.ps1  (+1 more)
(+80 files in other folders)
